Stop login dialogs touching footer on small devices

--- a/resources/sass/v2/organisms/_page.login.scss
+++ b/resources/sass/v2/organisms/_page.login.scss
@@ -64,6 +64,7 @@
         &--is-narrow {
             width: 650px;
             margin-top: 3rem;
+            margin-bottom: 3rem;
         }
     }
 
